force-app/main/default/objects/TVA_CFB__Version_History__c/TVA_CFB__Version_History__c.object-meta.xml
<CustomObject>
    <label>Version History</label>
    <nameField>
        <label>Version</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Version History</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>