force-app/main/default/objects/TVA_CFB__Version_History__c/fields/TVA_CFB__Cloud_Files__c.field-meta.xml
<CustomField>
    <fullName>TVA_CFB__Cloud_Files__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Cloud Files</label>
    <referenceTo>TVA_CFB__Cloud_Files__c</referenceTo>
    <relationshipLabel>Version History</relationshipLabel>
    <relationshipName>Version_History</relationshipName>
    <type>Lookup</type>
</CustomField>