force-app/main/default/objects/TVA_CFB__Version_History__c/fields/TVA_CFB__File_Name__c.field-meta.xml
<CustomField>
    <fullName>TVA_CFB__File_Name__c</fullName>
    <label>File Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>