force-app/main/default/objects/TVA_CFB__Version_History__c/fields/TVA_CFB__File_Size__c.field-meta.xml
<CustomField>
    <fullName>TVA_CFB__File_Size__c</fullName>
    <formula>IF( TVA_CFB__File_Size_in_Bytes__c &gt; 1000000000, TEXT(ROUND(TVA_CFB__File_Size_in_Bytes__c / 1073741824, 1)) &amp; &quot; GB&quot;, IF( TVA_CFB__File_Size_in_Bytes__c &gt; 1000000, TEXT( ROUND( TVA_CFB__File_Size_in_Bytes__c/ 1048576, 1)) &amp; &quot; MB&quot;, IF(TVA_CFB__File_Size_in_Bytes__c &gt; 1000, TEXT( ROUND(TVA_CFB__File_Size_in_Bytes__c / 1024,1)) &amp; &quot; KB&quot;, IF( TVA_CFB__File_Size_in_Bytes__c&gt; 0, &quot;1 KB&quot;, &quot;0 KB&quot;) ) ) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>File Size</label>
    <type>Text</type>
</CustomField>