force-app/main/default/objects/TVA_CFB__Version_History__c/fields/TVA_CFB__File_Size_in_Bytes__c.field-meta.xml
<CustomField>
    <fullName>TVA_CFB__File_Size_in_Bytes__c</fullName>
    <label>File Size in Bytes</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>