force-app/main/default/objects/TVA_CFB__Version_History__c/fields/TVA_CFB__Restore__c.field-meta.xml
<CustomField>
    <fullName>TVA_CFB__Restore__c</fullName>
    <formula>HYPERLINK(&quot;/apex/TVA_CFB__RestoreFileVersion?id=&quot;+ Id, $Label.tva_cfb__restore,&quot;_self&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Restore</label>
    <type>Text</type>
</CustomField>